# EchoTrader

./: .dockerignore  .env.example  .flyignore  .gitignore  Dockerfile  Procfile  README.md  docker-entrypoint.sh  fly.toml  main.py  pyproject.toml  railway.toml  requirements.txt
agents/: __init__.py  executor.py  perception.py  reasoner.py  risk_guard.py  twak_client.py  types.py
api/: server.py
config/: settings.py
demo/: README.md
echotrader-frontend/: .env.example  .gitignore  README.md  package-lock.json  package.json
echotrader-frontend/public/: llms.txt
echotrader-frontend/src/app/: globals.css  layout.tsx  page.tsx
echotrader-frontend/src/components/: AgentThought.tsx  DashboardNav.tsx  FearGreedGauge.tsx  HeroSection.tsx  HistoryChart.tsx  LiveSignals.tsx  Logo.tsx  MarketTicker.tsx  PanelCard.tsx  PortfolioPanel.tsx  RecentEchoes.tsx  SiteBackground.tsx  Skeleton.tsx  ThemeProvider.tsx  ThemeToggle.tsx  TradeLogTable.tsx
echotrader-frontend/src/lib/: api.ts  types.ts
memory/: lessons.md
scripts/: railway-deploy.cmd  railway-deploy.ps1  railway-login.cmd  run_demo_trades.py  twak-install.cmd  twak_bootstrap.py
terminals/: 1.txt  2.txt
tests/: test_executor.py  test_full_cycle.py  test_perception.py  test_reasoner.py  test_risk_guard.py  test_twak_client.py
