[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "echotrader"
version = "0.1.0"
description = "Reflexive market mirror agent — perceives contradictions, reasons with memory, executes via TWAK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.49.0",
    "httpx==0.28.1",
    "pydantic==2.10.6",
    "pydantic-settings==2.8.1",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
]
analysis = [
    "pandas==2.2.3",
]
identity = [
    "bnbagent==0.1.0",
]
api = [
    "fastapi==0.115.8",
    "uvicorn==0.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agents", "config"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]